-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
None
-
MSVC 2010
The QQuickVisualDataModelItem::object method calls the cacheItem->incubateObject method on line 903 of qquickvisualdatamodel.cpp with a NULL m_context->engine() sometimes. I have not been able to determine what series of events leads up to this.
I am attaching a stack trace of the problem.
For Gerrit Dashboard: QTBUG-26949 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
33376,1 | Fix assert when a VisualDataModels context has been invalidated. | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |